[gd_scene load_steps=9 format=3 uid="uid://dmwo4fku7gxfi"]

[ext_resource type="Script" uid="uid://bgil8g7x1uiyx" path="res://scripts/enemies/spider/spider.gd" id="1_4ra3w"]
[ext_resource type="PackedScene" uid="uid://br6by4wpicm1x" path="res://assets/models/SpiderPC2.glb" id="2_ih1lv"]
[ext_resource type="Script" uid="uid://bux36c0wyg322" path="res://scripts/enemies/spider/spider_hurt_box.gd" id="7_5s4wc"]
[ext_resource type="Script" uid="uid://d0deb1n1kyxgx" path="res://scripts/enemies/spider/spider_hit_box.gd" id="8_5s4wc"]
[ext_resource type="PackedScene" uid="uid://b24accxpn8lcu" path="res://scenes/health_bar.tscn" id="9_t7m53"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_5uy6h"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_6dlxb"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_mf3vg"]

[node name="spider" type="CharacterBody3D"]
script = ExtResource("1_4ra3w")

[node name="SpiderPC1" parent="." instance=ExtResource("2_ih1lv")]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_5uy6h")

[node name="SpiderHurtBox" type="Area3D" parent="."]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0)
script = ExtResource("7_5s4wc")

[node name="CollisionShape3D" type="CollisionShape3D" parent="SpiderHurtBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_6dlxb")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_height_offset = 1.0
avoidance_enabled = true

[node name="SpiderHitBox" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.87840056)
script = ExtResource("8_5s4wc")

[node name="CollisionShape3D" type="CollisionShape3D" parent="SpiderHitBox"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.5, -0.02417171)
shape = SubResource("CylinderShape3D_mf3vg")

[node name="HealthBar" parent="." instance=ExtResource("9_t7m53")]
transform = Transform3D(1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 1.3501838, 0)
show_only_when_damaged = true
enemy_bar = true

[connection signal="area_entered" from="SpiderHurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="area_exited" from="SpiderHurtBox" to="." method="_on_hurt_box_area_exited"]
[connection signal="target_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
